<resources>
    <string name="app_name">Moop</string>
    <string name="facebook_app_id">1924520374457307</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ou">ou</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="criar_uma_conta">Ou criar uma conta</string>
    <string name="texto_cadastro">Faça o seu cadastro e comece a usar o MOOP agora mesmo</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="selecione_acao">Selecione uma ação</string>
    <array name="foto_options">
        <item>Usar a câmera</item>
        <item>Carregar da galeria</item>
    </array>
    <string name="app_nao_conseguiu_criar_diretorio">O aplicativo não conseguiu criar um diretória para a imagem. Verifique as permissões do App</string>
    <string name="cortar">Cortar</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="senhas_diferentes">Senhas diferentes</string>
    <string name="email_ja_cadastrado">Email já cadastrado</string>
    <string name="dados_invalidos">Dados inválidos</string>
    <string name="algo_errado_ocorreu">Algo errado ocorreu</string>
    <string name="email_invalido">Email inválido</string>
    <string name="aguarde">Aguarde</string>
    <string name="efetuando_login">Efetuando Login</string>
    <string name="title_activity_moop">MoopActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="condominios">Condomínios</string>
    <string name="seus_condominios">Seus condomínios</string>
    <string name="escolha_o_condominio">Escolha o condomínio</string>
    <string name="hint_digite_o_cep">Digite seu CEP</string>
    <string name="blocos">Blocos</string>
    <string name="unidades">Unidades</string>
    <string name="morador">Morador</string>
    <string name="proprietario">Proprietário</string>
    <string name="app_configs">app_configs</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="trocar_senha">Trocar senha</string>
    <string name="sair">Sair</string>
    <string name="timeline">Timeline</string>
    <string name="reservas">Reservas</string>
    <string name="publicacao_hint">O que você está pensando?</string>
    <string name="escrever_publicacao">Escrever publicação</string>
    <string name="publicar">Publicar</string>
    <string name="criando_publicacao">Criando publicação</string>
    <string name="registrando">Registrando</string>
    <string name="atencao">Atenção</string>
    <string name="nenhum_condominio">Você não está cadastrado a nenhum condomínio e será redirecionado para tela de cadastro.</string>
    <string name="entendi">Entendi</string>
    <string name="email_nao_encontrado">Endereço de email não fornecido pela rede social</string>
    <string name="escreva_um_comentario">Escreva um comentário</string>
    <string name="comentarios">Comentários</string>
    <string name="bens_comuns_condominio">Bens comuns do condomínio</string>
    <string name="disponibilidades">Disponibilidades</string>
    <string name="reservar">Reservar</string>
    <string name="suas_reservas">suas reservas</string>
    <string name="confirmar">Confirmar</string>
    <string name="atualizando">Atualizando</string>
    <string name="avancar">Avançar</string>
    <string name="nenhum_condominio_encontrado">Nenhum condomínio cadastrado neste CEP</string>
    <string name="escolha_um_condominio">Selecione um condomínio</string>
    <string name="add_condominio">Adicionar Condomínio</string>
    <string name="agora_escolha_bloco">Agora escolha seu bloco</string>
    <string name="qual_sua_unidade">Qual a sua unidade?</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">OK</string>
    <string name="qual_seu_perfil">Qual seu perfil?</string>
    <string name="voce_precisa_de_autorizacao">Você ainda precisa de autorização para ver este conteúdo</string>
    <string name="registrando_unidade">Registrando em unidade</string>
    <string name="minhas_reservas">Minhas Reservas</string>
    <string name="bens_comuns">Bens Comuns</string>
    <string name="fazer_reserva">Fazer Reservas</string>
    <string name="chamados">Chamados</string>
    <string name="moradores">Moradores</string>
    <string name="convidar_morador">Convidar Morador</string>
    <string name="suporte">Suporte</string>
    <string name="meu_condominio">Meu Condomínio</string>
    <string name="bens_comuns_disponiveis">Bens comuns disponíveis</string>
    <string name="regras_de_uso">Regras de uso</string>
    <string name="eu_concordo">Eu concordo</string>
    <string name="solicitar_reserva">Solicitar Reserva</string>
    <string name="nao_encontrei_meu_condominio">Não encontrei meu condomínio</string>
    <string name="cidade">Cidade</string>
    <string name="edtado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="nome_condominio">Nome do condomínio</string>
    <string name="telefone">Telefone</string>
    <string name="novo_condominio">Novo Condomínio</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="nome_morador">Unidade, Bloco ou Morador</string>
    <string name="criar_novo_chamado">Criar novo chamado</string>
    <string name="titulo">Título</string>
    <string name="qual_seu_problema">Qual seu problema?</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="abrir_chamado">Abrir Chamado</string>
    <string name="title_activity_mensagem">MensagemActivity</string>
    <string name="texto_da_mensagem">Texto da mensagem</string>
    <string name="em_andamento">Em andamento</string>
    <string name="aberto">Aberto</string>
    <string name="resolvido">Resolvido</string>
    <string name="cancelado">Cancelado</string>
    <string name="dia_nao_disponivel">Dia não disponível</string>
    <string name="numero">Número</string>
    <string name="cep_invalido">CEP inválido</string>
    <string name="horizontal">Horizontal</string>
    <string name="cadastrando_condominio">Cadastrando condomínio</string>
    <string name="add_bloco_condominio">Adicionar Blocos ao Condomínio</string>
    <string name="nome_bloco">Nome do bloco</string>
    <string name="numero_bloco">Número bloco</string>
    <string name="add_bloco">Adicionar bloco</string>
    <string name="bloco_add_com_sucesso">Bloco adicionado com sucesso!</string>
    <string name="cadastrando_bloco">Cadastrando bloco</string>
    <string name="cancelar_reserva">CANCELAR RESERVA</string>
    <string name="deseja_cancelar_reserva">Deseja cancelar esta reserva?</string>
    <string name="reserva_cancelada_com_sucesso">Reserva cancelada com sucesso</string>
    <string name="reserva_efetuada_com_sucesso">Reserva efetuada com sucesso!</string>
    <string name="efetuando_reserva">Efetuando reserva</string>
    <string name="nenhum_chamado">Você ainda não criou nenhum chamado</string>
    <string name="chamado_criado_com_sucesso">Chamado criado com sucesso</string>
    <string name="aprovar_moradores">Aprovar Moradores</string>
    <string name="aceitar">Aceitar</string>
    <string name="perfil_reprovado_com_sucesso">Perfil reprovado com sucesso!</string>
    <string name="perfil_aprovado_com_sucesso">Perfil aprovado com sucesso!</string>
    <string name="efetuando_requisicao">Efetuando requisição</string>
    <string name="gerenciar_condominio">Gerenciar Condomínio</string>
    <string name="email_moop">suporte@moop.mobi</string>
    <string name="site_moop">http://app.moop.mobi</string>
    <string name="contate_nos">Contate-nos:</string>
    <string name="ou_acesse">ou acesse:</string>
    <string name="sugestion_subject">Email para suporte</string>
    <string name="send_email">Enviar email</string>
    <string name="informacoes_sobre_condominio">Informações do Condomínio</string>
    <string name="vertical">Vertical</string>
    <string name="deseja_apagar_comentario">Deseja apagar este comentário?</string>
    <string name="deseja_apagar_mensagem">Deseja apagar esta mensagem?</string>
    <string name="deseja_apagar_postagem">Deseja apagar esta postagem?</string>
    <string name="hint_phone_number">Número do telefone</string>
    <string name="hint_verification_code">Código de verificação</string>
    <string name="start_phone_auth">Autenticar</string>
    <string name="verify_phone_auth">Verificar Telefone</string>
    <string name="resend_phone_auth">Reenviar</string>
    <string name="sign_out">Deslogar</string>
    <string name="phone_title_text">Número do telefone</string>
    <string name="signed_out">Deslogado</string>
    <string name="signed_in">Logado</string>
    <string name="status_sign_in_failed">Sign in failed</string>
    <string name="instant_validation">Instant validation</string>
    <string name="status_verification_succeeded">Verificação positiva</string>
    <string name="status_verification_failed">Verificação falha (verifique seu número do celular)</string>
    <string name="status_code_sent">Código enviado</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="seu_pais">Selecione seu país</string>
    <string name="insira_seu_telefone">Insira seu número de telefone</string>
    <string name="hint_numero">número</string>
    <string name="insira_o_codigo_verificacao">Insira o código de verificação</string>
    <string name="hint_codigo">Código</string>
    <string name="continuar">Continuar</string>
    <string name="numero_invalido">Número inválido</string>
    <string name="codigo_invalido">Código inválido</string>
    <string name="reenviar">Reenviar</string>
    <string name="recebendo_codigo">Recebendo código...</string>
    <string name="validando_codigo">Validando código...</string>
    <string name="status_verification_failed_code">Verificação falha (verifique o código)</string>
    <string name="entrando_no_moop">Entrando no MOOP</string>
    <string name="finalizar">Finalizar Cadastro</string>
    <string name="nenhum_bloco">Nenhum bloco inserido</string>
    <string name="nenhum_feed">Nenhuma publicação existente.\nSeja o primeiro a publicar</string>
    <string name="deixar_condominio">Deixar Condomínio</string>
    <string name="invite_text">Venha para o MOOP https://play.google.com/store/apps/details?id=brmobi.moop</string>
    <string name="loading_tickets">Carregando chamados</string>
    <string name="my_reservations">Minhas Reservas</string>
    <string name="shared_resources">Bens Comuns</string>
    <string name="reservations">Reservas</string>
    <string name="carregando_disponibilidades">Carregando disponibilidades</string>
    <string name="loading_comments">Carregando comentários</string>
    <string name="generating_new_password">Gerando nova senha</string>
    <string name="perfil_atualizado_sucesso">Perfil atualizado com sucesso</string>
    <string name="publicacao_criacada_sucesso">Publicação criada com sucesso</string>
    <string name="insira_o_numero_unidade">Insira o número da unidade</string>
    <string name="selecione_uma_data">Selecione uma data</string>
</resources>
