<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Condomínio Selecionado">
        <menu>
            <item
                android:id="@+id/chamados"
                android:icon="@drawable/ic_chamado"
                android:title="@string/chamados" />

            <item
                android:id="@+id/moradores"
                android:icon="@drawable/ic_moradores"
                android:title="@string/moradores" />

            <item
                android:id="@+id/aprovar_moradores"
                android:icon="@drawable/ic_lock_open"
                android:title="@string/aprovar_moradores" />

            <item
                android:id="@+id/meu_condominio"
                android:icon="@drawable/ic_predio"
                android:title="@string/meu_condominio" />

        </menu>
    </item>

</menu>
