<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo_condominio"
            android:textColor="@color/text_color_default"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_nome_condominio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_condominio" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_o_cep" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtado" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/avancar"
            android:theme="@style/BtnLogarTheme" />

    </LinearLayout>


</ScrollView>