<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_title_text" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Firebase User ID: 123456789abc" />

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccpDialog_allowSearch="false"
            app:ccpDialog_backgroundColor="@color/white"
            app:ccpDialog_fastScroller_bubbleColor="@color/text_color_default"
            app:ccpDialog_fastScroller_handleColor="@color/text_color_default"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccpDialog_searchEditTextTint="@color/text_color_default"
            app:ccpDialog_showCloseIcon="true"
            app:ccpDialog_showFastScroller="false"
            app:ccpDialog_showPhoneCode="true"
            app:ccpDialog_textColor="@color/text_color_default"
            app:ccp_arrowSize="20dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_clickable="true"
            app:ccp_contentColor="@color/text_color_default"
            app:ccp_countryAutoDetectionPref="SIM_ONLY"
            app:ccp_countryPreference="BR,US"
            app:ccp_defaultLanguage="FRENCH"
            app:ccp_defaultNameCode="BR"
            app:ccp_flagBorderColor="@color/text_color_default"
            app:ccp_rememberLastSelection="true"
            app:ccp_selectionMemoryTag="signupCCP"
            app:ccp_showArrow="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true"
            app:ccp_textGravity="RIGHT"
            app:ccp_textSize="20sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth" />

                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth" />

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>