<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="mobi.moop.features.chamado.CriarChamadoFragment">

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="#c2c2c2">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="center"
            android:src="@drawable/ic_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </FrameLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_titulo_chamado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edit_descricao_chamado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qual_seu_problema"
        android:lines="5" />

    <Button
        android:id="@+id/btnAbrirChamado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrir_chamado"
        android:theme="@style/BtnLogarTheme" />
</LinearLayout>
