<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editCEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_digite_o_cep"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputCep"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_nao_encontrei_condominio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAvancar"
        android:drawableRight="@drawable/ic_avancar_white"
        android:text="@string/nao_encontrei_meu_condominio"
        android:theme="@style/BtnConfirmarTheme"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnAvancar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerCondiminios"
        android:drawableRight="@drawable/ic_avancar_white"
        android:text="@string/avancar"
        android:theme="@style/BtnLogarTheme"
        android:visibility="invisible" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerCondiminios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress" />


</RelativeLayout>


